# ai-webscraper

./: .env.example  .gitignore  README.md  doc.md  docker-compose.yml  projectprompt.md  pyproject.toml  setup_test_env.py
.qoder/quests/: project-setup-and-development.md
ci/: build-images.sh  deploy.sh  github-actions.yml  gitlab-ci.yml
docs/: product_design.md
kubernetes/base/: kustomization.yaml
kubernetes/base/api-server/: deployment.yaml  hpa.yaml  networkpolicy.yaml  service.yaml
kubernetes/base/coordinator/: deployment.yaml  service.yaml
kubernetes/base/crawl4ai-scraper-worker/: deployment.yaml  networkpolicy.yaml  scaledobject.yaml  service.yaml
kubernetes/base/ingestion-service/: deployment.yaml  networkpolicy.yaml  scaledobject.yaml
kubernetes/base/nginx/: deployment.yaml  service.yaml
kubernetes/base/processing-worker/: deployment.yaml  networkpolicy.yaml  scaledobject.yaml
kubernetes/base/scraper-headless-worker/: deployment.yaml  networkpolicy.yaml  scaledobject.yaml
kubernetes/base/scraper-http-worker/: deployment.yaml  networkpolicy.yaml  scaledobject.yaml
kubernetes/base/shared/: configmap.yaml  namespace.yaml  rbac.yaml  secrets.sops.yaml
kubernetes/overlays/production/: configmap-patch.yaml  kustomization.yaml  resource-limits-patch.yaml
kubernetes/overlays/staging/: configmap-patch.yaml  kustomization.yaml  resource-limits-patch.yaml
monitoring/: README.md  prometheus.yml
monitoring/grafana/dashboards/: k-scrape-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: init-db.sql  setup.sh
services/api-server/: Dockerfile  requirements.txt
services/api-server/app/: __init__.py  main.py
services/api-server/app/middleware/: __init__.py  auth.py  logging.py  metrics.py
services/api-server/app/models/: __init__.py
services/api-server/app/routers/: __init__.py  health.py  jobs.py  upload.py
services/api-server/app/services/: __init__.py  job_service.py  task_service.py  upload_service.py
services/coordinator/: Dockerfile  requirements.txt
services/coordinator/app/: __init__.py  main.py
services/coordinator/app/services/: __init__.py  job_coordinator.py
services/crawl4ai-scraper-worker/: Dockerfile  requirements.txt
services/crawl4ai-scraper-worker/app/: __init__.py  main.py
services/crawl4ai-scraper-worker/app/services/: __init__.py  crawl4ai_scraper.py  s3_storage.py
services/crawl4ai-scraper-worker/tests/: test_crawl4ai_scraper.py
services/data-processing-worker/: Dockerfile  requirements.txt
services/data-processing-worker/app/: __init__.py  main.py
services/data-processing-worker/app/services/: __init__.py  data_processor.py
services/headless-scraper-worker/: Dockerfile  requirements.txt
services/headless-scraper-worker/app/: __init__.py  main.py
services/headless-scraper-worker/app/services/: __init__.py  headless_scraper.py
services/http-scraper-worker/: Dockerfile  requirements.txt
services/http-scraper-worker/app/: __init__.py  main.py
services/http-scraper-worker/app/services/: __init__.py  http_scraper.py  proxy_manager.py  s3_storage.py
services/ingestion-service/: Dockerfile  requirements.txt
services/ingestion-service/app/: __init__.py  main.py
services/ingestion-service/app/services/: __init__.py  file_processor.py  ingestion_service.py  s3_client.py
services/worker-shared/: README.md  pyproject.toml
services/worker-shared/scraper_lib/: __init__.py  cache.py  config.py  database.py  observability.py  utils.py
services/worker-shared/scraper_lib/alembic/: env.py
tests/: conftest.py  test_crawl4ai_comprehensive.py  test_results.json
tests/e2e/: test_e2e.py
tests/integration/: test_crawl4ai_integration.py  test_integration.py
tests/unit/api_server/: test_api.py
tests/unit/http_scraper_worker/: test_http_scraper.py
tests/unit/ingestion_service/: test_ingestion.py
tests/unit/shared/: test_cache.py  test_database.py
