[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-lib"
version = "1.0.0"
description = "Shared library for K-Scrape Nexus microservices"
dependencies = [
    "fastapi>=0.104.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "validators>=0.22.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper_lib*"]

[tool.setuptools.package-data]
scraper_lib = ["alembic.ini", "alembic/**/*"]